--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: strapi-starter-project
     working_dir: /usr/src/app
     volumes:
-      - ./:/usr/src/app
+      - strapi-data/:/usr/src/app
     ports:
       - '1337:1337'
     command: yarn develop
