--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,14 @@ API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
+
+
+DATABASE_CLIENT=postgres
+DATABASE_HOST=ip-du-container-postgres
+DATABASE_PORT=5432
+DATABASE_NAME=db-strapi
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=js4life
+DATABASE_SSL=false
+DATABASE_FILENAME=.tmp/data.db
+JWT_SECRET=p7s2QeEDJiwDJSXmvlU59Q==
