--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   strapi:
     build: .
     container_name: strapi
+    working_dir: /app
     ports:
       - '1337:1337'
     environment:
