--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     container_name: strapi
     ports:
       - '1337:1337'
-    working_dir: /opt/app
+    working_dir: /app
     environment:
       DATABASE_CLIENT: postgres
       DATABASE_NAME: db-strapi
