--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,6 @@ services:
     container_name: strapi
     ports:
       - '1337:1337'
-    working_dir: /app
     environment:
       DATABASE_CLIENT: postgres
       DATABASE_NAME: db-strapi
@@ -34,6 +33,6 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: js4life
     volumes:
-      - /home/julek/docker/strapi-project/data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
 
   
