--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,8 @@
 
   "exclude": [
     "node_modules/",
-    "build/",
-    "dist/",
+    // "build/",
+    // "dist/",
     ".cache/",
     ".tmp/",
 
