--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       DATABASE_NAME: strapi
       DATABASE_USERNAME: strapi
       DATABASE_PASSWORD: strapi
-      NODE_ENV: production
+      NODE_ENV: development
     volumes:
       - ./public/uploads:/opt/app/public/uploads
       - ./config:/opt/app/config
